@@ -39,8 +39,10 @@
     * New fs.expose implementations:
         * dokan:   mount an FS object as a drive using Dokan (win32-only)
     * Modified listdir and walk methods to accept callables as well as strings
-      for wildcards
-    * Fix operation of OSFS on win32 when it points to the root of a drive.
+      for wildcards.
+    * Fixed operation of OSFS on win32 when it points to the root of a drive.
+    * Made SubFS a subclass of WrapFS, and moved it into its own module at
+      fs.wrapfs.subfs.
     * Fix OSFS.add_watcher on linux platforms; previous version would cancel
       any watchers when a new one was added.
 
